clusters/cosmos/apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: immich-ingress
spec:
 tls:
 - hosts:
   - immich.cosmos.cboxlab.com
   secretName: immich-tls-secret
 rules:
 - host: immich.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: immich
           port:
             name: http
       path: /
       pathType: Prefix
